--- a/modules/email-templates/client/views/email-template-view.html
+++ b/modules/email-templates/client/views/email-template-view.html
@@ -15,11 +15,19 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="form-group">
-					<label for="headline" class="control-label">Name</label>
+					<label for="name" class="control-label">Name</label>
 					<p class="form-control-static">{{ emailtemplate.name }}</p>
 				</div>
 			</div>
 		</div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="form-group">
+          <label for="subject" class="control-label">Subject</label>
+          <p class="form-control-static">{{ emailtemplate.subject }}</p>
+        </div>
+      </div>
+    </div>
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="form-group">
@@ -30,7 +38,7 @@
 		</div>
 
 		<hr>
-		
+
 		<div class="text-right">
 			<a class="btn btn-default" ui-sref="admin.emailtemplate.list">Cancel</a>
 			<a class="btn btn-default" ui-sref="admin.emailtemplate.edit({emailtemplateId:emailtemplate._id})">Edit</a>
