--- a/modules/projects/client/views/project.abstract.html
+++ b/modules/projects/client/views/project.abstract.html
@@ -1,23 +1,26 @@
 <section id="project-view" class="row">
-    
+
     <div class="view-title-container">
         <h1>{{ project.name }}</h1>
     </div>
-    
-    
+
+
     <div class="view-content flex-content">
          <!-- SIDE NAVIGATION -->
-         <aside class="left-panel" id="main-side-section">
-            <tmpl-system-menu x-menu-context="'project'" x-project="project"></tmpl-system-menu>  
+         <aside class="left-panel" id="main-side-section" ng-if="authentication.user">
+            <tmpl-system-menu x-menu-context="'project'" x-project="project"></tmpl-system-menu>
          </aside>
-    
+
         <!-- PROJECTS DETAILS -->
-        <section class="main-panel">
+        <section class="main-panel" style="padding-left:1.5rem" ng-if="!authentication.user">
             <ui-view id="main-content-section"></ui-view>
         </section>
-        
+        <section class="main-panel" ng-if="authentication.user">
+            <ui-view id="main-content-section"></ui-view>
+        </section>
+
         <!-- ACTIVITIES LIST -->
-        <section class="right-panel activities-container">
+        <section class="right-panel activities-container" ng-if="authentication.user">
             <h2>My Activities<span>(*)</span></h2>
             <div class="panel panel-default tab-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -88,7 +91,7 @@
                 </div>
             </div>
         </section>
-    
+
     </div>
-    
+
 </section>
