fixed the colour of the markers

--- a/modules/projects/client/views/projects-partials/projects-map.html
+++ b/modules/projects/client/views/projects-partials/projects-map.html
@@ -21,6 +21,7 @@
 			idKey="'_id'"
 			coords="'self'"
 			type="'cluster'"
+			clusterOptions="projectList.map.clusterOptions"
 			events="projectList.map.markersEvents">
 		</ui-gmap-marker>
 
