fixed label error on main page

--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -13,7 +13,7 @@
 			</td>
 
 			<td ng-if="environment === 'MEM'"
-				title="'data-Permit'"
+				data-title="'Permit'"
 				filter="{'memPermitID':'text'}"
 				sortable="'memPermitID'">
 				{{o.memPermitID}}
