Possible fix for the missing permit id

--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -15,6 +15,7 @@
 			<td ng-if="environment === 'MEM'"
 				data-title="'Permit'"
 				filter="{'memPermitID':'text'}"
+				filter-data="projectList.memPermitID"
 				sortable="'memPermitID'">
 				{{o.memPermitID}}
 			</td>
