add default invitation email template, update project invitation screen to manage user list and send off the email.  add new method to email library to take in the template based code for subject and content, populate accordingly.

--- a/modules/email-templates/client/views/email-template-edit.html
+++ b/modules/email-templates/client/views/email-template-edit.html
@@ -48,7 +48,7 @@
 			<div class="col-sm-12">
 				<div class="form-group" x-show-errors>
 					<label for="content" class="control-label">Content</label>
-					<textarea id="content" rows="6" name="content" class="form-control input-sm" ng-model="emailtemplate.content" required></textarea>
+					<textarea ui-tinymce id="content" rows="10" name="content" class="form-control" ng-model="emailtemplate.content" required></textarea>
 						<div ng-messages="emailtemplateForm.content.$error" role="alert">
 							<p class="help-block error-text" ng-message="required">Content is required.</p>
 						</div>
