Exposing documents control on the project details page (as per request)

--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -96,8 +96,7 @@
 			class="anchor-section"
 			id="anchor-documents"
 			x-project="project"
-			x-approvals="false"
-			ng-if="('project'| shouldDisplayPanel:'documents':project.status) && environment === 'MEM'">
+			x-approvals="false">
 		</tmpl-documents-browser>
 
 		<!-- PROJECT MAP -->
