fixed artifact add missing, fixed a lint error

--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -1,4 +1,4 @@
-<div class="row hidden">
+<div class="row" ng-if="!s.public">
 	<div class="col-sm-6 col-sm-offset-6 text-right form-inline">
 		<div class="form-group">
 			<show-filter x-toggle-filter="toggleFilter"></show-filter>
