added a failover for artifacts if the data has shifted to find a template and type by id. wrapped redundant display code for artifact into a directive that handles the switch between document and template. Made some word changes to the decision pages.

--- a/modules/artifacts/client/views/artifact-approve.html
+++ b/modules/artifacts/client/views/artifact-approve.html
@@ -6,7 +6,9 @@
 	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
 </div>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
+<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
+
+<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 
 <div class="panel panel-default">
 	<div class="panel-body">
