--- a/modules/artifacts/client/views/artifact-view.html
+++ b/modules/artifacts/client/views/artifact-view.html
@@ -7,7 +7,9 @@
 	<a class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:artifact._id})">Edit</a>
 </div>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
+<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
+
+<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 
 <div ng-include="'modules/artifacts/client/views/partial.artifact-notes.html'"></div>
 
