--- a/modules/templates/client/views/template-test.html
+++ b/modules/templates/client/views/template-test.html
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 	<div class="col-sm-9">
-		<tmpl-template-render x-template="template" x-mode="edit" x-project="project" x-document="dataset"></tmpl-template-render>
+		<tmpl-template-render x-template="template" x-mode="'edit'" x-project="project" x-document="dataset"></tmpl-template-render>
 	</div>
 </div>
 
