--- a/modules/artifacts/client/views/artifact-decision.html
+++ b/modules/artifacts/client/views/artifact-decision.html
@@ -1,24 +1,26 @@
 <h1 class="page-title">
-	Decision for {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
+	{{artifact.name}} ({{artifact.version}})
 </h1>
 
 <div class="text-right">
 	<a class="btn btn-link btn-xs" ui-sref="p.detail">Cancel</a>
 </div>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
+<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
+
+<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 
 <div class="panel panel-default">
 	<div class="panel-body">
 
-		<h3>Rejection Note</h3>
+		<h3>Notes</h3>
 		<div class="form-group">
-			<textarea rows="10" class="form-control" ng-model="artifact.reviewnote"></textarea>
+			<textarea rows="10" class="form-control" ng-model="artifact.decisionnote"></textarea>
 		</div>
 		<div class="text-right">
 			<a class="btn btn-default" ui-sref="p.detail">Cancel</a>
-			<a class="btn btn-danger" ng-click="reject()">Reject and Return for {{buttons.prev}}</a>
-			<a class="btn btn-success" ng-click="submit()">Accept for {{buttons.next}}</a>
+			<a class="btn btn-danger" ng-click="reject()">Reject</a>
+			<a class="btn btn-success" ng-click="submit()">Approve {{artifact.name}}</a>
 		</div>
 	</div>
 </div>
