--- a/modules/artifacts/client/views/artifact-executive.html
+++ b/modules/artifacts/client/views/artifact-executive.html
@@ -2,7 +2,9 @@
 	Executive Approval of {{artifact.name}} ({{artifact.version}}) for {{ project.name }}
 </h1>
 
-<div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div>
+<!-- <div ng-include="'modules/artifacts/client/views/partial.artifact-view.html'"></div> -->
+
+<tmpl-artifact-display x-mode="'view'" x-artifact="artifact" x-project="project"></tmpl-artifact-display>
 
 <div class="panel panel-default">
 	<div class="panel-body">
