--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -15,8 +15,12 @@
 	<div class="row">
 
 	    <div class="col-sm-12">
-	        <h4>Main Artifact Document</h4>
-	        <div class="panel panel-default">
+
+
+	        <div class="panel panel-info">
+	            <div class="panel-heading">
+	            	Main Artifact Document
+	            </div>
 	            <div class="panel-body">
 	                <div class="file-horiz">
 	                    <span class="glyphicon glyphicon-list-alt"></span>
