--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -8,7 +8,7 @@
 		</ul>
 		<hr>
 		<ul class="list-unstyled">
-			<li><a href ui-sref="activities">My Projects</a></li>
+			<li><a href ui-sref="activities">My Dashboard</a></li>
 		</ul>
 	</div>
 
@@ -117,7 +117,7 @@
 			<li><a href="/api/auth/signout" target="_self">Logout</a></li>
 	  	</ul>
 	</div>
-	
+
 </div>
 <!--
 <div class="container" ng-controller="HeaderController">
