Remove add topics, change add value components label and hookup to add UI

--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -5,10 +5,8 @@
 <div class="view-body-container">
 	<div class="button-bar clearfix">
 		<div class="pull-left">
-			<button class="btn btn-default btn-sm" ui-sref="p.vc.create()">
-				<span class="glyphicon glyphicon-plus"></span><span>Add Value Component</span></button>
 			<button class="btn btn-default btn-sm" ui-sref="p.vc.list" ng-click="openAddTopic()">
-				<span class="glyphicon glyphicon-plus"></span><span>Add Topics</span>
+				<span class="glyphicon glyphicon-plus"></span><span>Add Valued Component</span>
 			</button>
 		</div>
 	</div>
