--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -19,6 +19,11 @@
 				<td data-title="'Sector'" title:'Sector'  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="data.ptypes" >{{o.sector}}</td>
 				<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
 				<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
+				<td>
+					<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.complaint.edit({complaintId:o._id})">
+						<i class="glyphicon glyphicon-pencil"></i>
+					</a>
+				</td>
 			</tr>
 			<tr ng-if="!$data || $data.length === 0">
 				<td colspan="6">
