Change for vcID

--- a/modules/vcs/client/views/vc-list.html
+++ b/modules/vcs/client/views/vc-list.html
@@ -20,7 +20,7 @@
 				<td data-title="'Stage'"  title:'Stage'   filter="{'stage':'select'}"    sortable="'stage'"   filter-data="data.stypes">{{o.stage}}</td>
 				<td data-title="'Pillar'" title:'Pillar'  filter="{'pillar':'select'}"   sortable="'pillar'"  filter-data="data.pillars">{{o.pillar}}</td>
 				<td>
-					<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.complaint.edit({complaintId:o._id})">
+					<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.vc.edit({vcId:o._id})">
 						<i class="glyphicon glyphicon-pencil"></i>
 					</a>
 				</td>
