Changing from complaints/topics to vc's

--- a/modules/vcs/client/views/topic-modal-select.html
+++ b/modules/vcs/client/views/topic-modal-select.html
@@ -2,7 +2,7 @@
 <div class="select-topic-modal">
 
 	<div class="modal-header">
-		<h3 class="modal-title">Add Topic(s)</h3>
+		<h3 class="modal-title">Add Valued Component(s)</h3>
 	</div>
 
 	<div class="modal-body">
@@ -15,7 +15,7 @@
 					<td data-title="'Type'"    sortable="'type'"    filter="{'type':'select'}"   filter-data="getTypes()"   >{{o.type}}</td>
 					<td data-title="'Parent'"  sortable="'parent'"  filter="{'parent':'text'}"                         		>{{o.parent}}</td>
 					<tr ng-show="!$data || !$data.length" class="text-center">
-						<td colspan="5">No Topics found.</td>
+						<td colspan="5">No Valued Components found.</td>
 					</tr>					
 				</tr>
 			</table>
