--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -1,10 +1,10 @@
 <h1 class="page-title">
-	Complaint for {{ project.name }}
+	Valued Component for {{ vc.name }}
 </h1>
 
 <div class="block-content">
 	<div class="panel-body">
-		Complaint Details Go Here
+		Valued Component Details Go Here
 	</div>
 </div>
 <div>
