Adding report requirements to model and UI

--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -37,7 +37,7 @@
 			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="shortDesc" class="control-label">Report Requirements</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="d.vc.reportRequirements" rows=6></textarea>
+					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="vc.reportRequirements" rows=6></textarea>
 				</div>
 			</div>
 		</div>
