--- a/modules/topics/client/views/topic-list.html
+++ b/modules/topics/client/views/topic-list.html
@@ -1,10 +1,10 @@
 <h1 class="page-title no-lower-margin">
-	Topics Library
+	Valued Components Library
 </h1>
 
 <div class="row">
 	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.topic.create()">+ Add New Topic</a>
+		<a class="btn btn-xs btn-link" ui-sref="admin.topic.create()">+ Add New Valued Component</a>
 		<show-filter x-toggle-filter="toggleFilter"></show-filter>
 	</div>
 </div>
