--- a/modules/topics/client/views/topic-view.html
+++ b/modules/topics/client/views/topic-view.html
@@ -1,5 +1,5 @@
 <h1 class="page-title no-lower-margin">
-	View Topic
+	View Valued Components
 </h1>
 
 <div class="row">
@@ -14,13 +14,13 @@
 		<div class="row">
 			<div class="col-sm-9">
 				<div class="form-group">
-					<label for="title" class="control-label">Topic Name</label>
+					<label for="title" class="control-label">Name</label>
 					<p class="form-control-static">{{ topic.name }}</p>
 				</div>
 			</div>
 			<div class="col-sm-3">
 				<div class="form-group">
-					<label for="type" class="control-label">Topic Type</label>
+					<label for="type" class="control-label">Type</label>
 					<p class="form-control-static">{{ topic.type }}</p>
 				</div>
 			</div>
@@ -29,7 +29,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="form-group">
-					<label for="shortDesc" class="control-label">Topic Description</label>
+					<label for="shortDesc" class="control-label">Description</label>
 					<div class='form-control-static' ng-bind-html="topic.description"></div>
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 
 			<div class="col-sm-6">
 				<div class="form-group">
-					<label for="parent" class="control-label">Parent Topic</label>
+					<label for="parent" class="control-label">Parent Valued Component</label>
 					<p class="form-control-static">{{ topic.parent || 'Not Defined' }}</p>
 				</div>
 			</div>
