--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -19,6 +19,7 @@
 				<ul class="small list-unstyled list-documents">
 					<li
 						ng-click="docBrowser.filterList(row)"
+						ng-hide="row.label === 'Not Specified'"
 						class="row-folder clickable row-folder-depth-{{ row.depth }}"
 						ng-repeat="row in docBrowser.docTypes"
 						ng-class="{'active btn-primary': docBrowser.filterDocsSelected(row)}">
